docs/sdk/v0.47/build/modules.mdx
---
title: "Module Summary"
description: "Version: v0.47"
---

Here are some production-grade modules that can be used in Cosmos SDK applications, along with their respective documentation:

* [Auth](/v0.47/build/modules/auth) - Authentication of accounts and transactions for Cosmos SDK applications.
* [Authz](/v0.47/build/modules/authz) - Authorization for accounts to perform actions on behalf of other accounts.
* [Bank](/v0.47/build/modules/bank) - Token transfer functionalities.
* [Crisis](/v0.47/build/modules/crisis) - Halting the blockchain under certain circumstances (e.g. if an invariant is broken).
* [Distribution](/v0.47/build/modules/distribution) - Fee distribution, and staking token provision distribution.
* [Evidence](/v0.47/build/modules/evidence) - Evidence handling for double signing, misbehaviour, etc.
* [Feegrant](/v0.47/build/modules/feegrant) - Grant fee allowances for executing transactions.
* [Governance](/v0.47/build/modules/gov) - On-chain proposals and voting.
* [Mint](/v0.47/build/modules/mint) - Creation of new units of staking token.
* [Params](/v0.47/build/modules/params) - Globally available parameter store.
* [Slashing](/v0.47/build/modules/slashing) - Validator punishment mechanisms.
* [Staking](/v0.47/build/modules/staking) - Proof-of-Stake layer for public blockchains.
* [Upgrade](/v0.47/build/modules/upgrade) - Software upgrades handling and coordination.
* [NFT](/v0.47/build/modules/nft) - NFT module implemented based on [ADR43](https://docs.cosmos.network/main/architecture/adr-043-nft-module.html).
* [Consensus](/v0.47/build/modules/consensus) - Consensus module for modifying CometBFT's ABCI consensus params.
* [Circuit](/v0.47/build/modules/circuit) - Circuit breaker module for pausing messages.
* [Genutil](/v0.47/build/modules/genutil) - Genesis utilities for the Cosmos SDK.

To learn more about the process of building modules, visit the [building modules reference documentation](https://docs.cosmos.network/main/building-modules/intro).

## IBC[​](#ibc "Direct link to IBC")

The IBC module for the SDK is maintained by the IBC Go team in its [own repository](https://github.com/cosmos/ibc-go).

Additionally, the [capability module](https://github.com/cosmos/ibc-go/tree/fdd664698d79864f1e00e147f9879e58497b5ef1/modules/capability) is from v0.48+ maintained by the IBC Go team in its [own repository](https://github.com/cosmos/ibc-go/tree/fdd664698d79864f1e00e147f9879e58497b5ef1/modules/capability).

## CosmWasm[​](#cosmwasm "Direct link to CosmWasm")

The CosmWasm module enables smart contracts, learn more by going to their [documentation site](https://book.cosmwasm.com/), or visit [the repository](https://github.com/CosmWasm/cosmwasm).

## EVM[​](#evm "Direct link to EVM")

Read more about writing smart contracts with solidity at the official [`evm` documentation page](https://docs.evmos.org/protocol/modules/evm).
