docs/sdk/v0.50/build/modules.mdx
---
title: "List of Modules"
description: "Version: v0.50"
---

Here are some production-grade modules that can be used in Cosmos SDK applications, along with their respective documentation:

## Essential Modules[​](#essential-modules "Direct link to Essential Modules")

Essential modules include functionality that *must* be included in your Cosmos SDK blockchain. These modules provide the core behaviors that are needed for users and operators such as balance tracking, proof-of-stake capabilities and governance.

* [Auth](/v0.50/build/modules/auth) - Authentication of accounts and transactions for Cosmos SDK applications.
* [Bank](/v0.50/build/modules/bank) - Token transfer functionalities.
* [Circuit](/v0.50/build/modules/circuit) - Circuit breaker module for pausing messages.
* [Consensus](/v0.50/build/modules/consensus) - Consensus module for modifying CometBFT's ABCI consensus params.
* [Distribution](/v0.50/build/modules/distribution) - Fee distribution, and staking token provision distribution.
* [Evidence](/v0.50/build/modules/evidence) - Evidence handling for double signing, misbehaviour, etc.
* [Governance](/v0.50/build/modules/gov) - On-chain proposals and voting.
* [Genutil](/v0.50/build/modules/genutil) - Genesis utilities for the Cosmos SDK.
* [Mint](/v0.50/build/modules/mint) - Creation of new units of staking token.
* [Slashing](/v0.50/build/modules/slashing) - Validator punishment mechanisms.
* [Staking](/v0.50/build/modules/staking) - Proof-of-Stake layer for public blockchains.
* [Upgrade](/v0.50/build/modules/upgrade) - Software upgrades handling and coordination.

## Supplementary Modules[​](#supplementary-modules "Direct link to Supplementary Modules")

Supplementary modules are modules that are maintained in the Cosmos SDK but are not necessary for the core functionality of your blockchain. They can be thought of as ways to extend the capabilities of your blockchain or further specialize it.

* [Authz](/v0.50/build/modules/authz) - Authorization for accounts to perform actions on behalf of other accounts.
* [Epochs](/v0.50/build/modules/epochs) - Registration so SDK modules can have logic to be executed at the timed tickers.
* [Feegrant](/v0.50/build/modules/feegrant) - Grant fee allowances for executing transactions.
* [Group](/v0.50/build/modules/group) - Allows for the creation and management of on-chain multisig accounts.
* [NFT](/v0.50/build/modules/nft) - NFT module implemented based on [ADR43](https://docs.cosmos.network/main/architecture/adr-043-nft-module.html).
* [ProtocolPool](/v0.50/build/modules/protocolpool) - Extended management of community pool functionality.

## Deprecated Modules[​](#deprecated-modules "Direct link to Deprecated Modules")

The following modules are deprecated. They will no longer be maintained and eventually will be removed in an upcoming release of the Cosmos SDK per our [release process](https://github.com/cosmos/cosmos-sdk/blob/main/RELEASE_PROCESS.md).

* [Crisis](/v0.50/build/modules/crisis) - *Deprecated* halting the blockchain under certain circumstances (e.g. if an invariant is broken).
* [Params](/v0.50/build/modules/params) - *Deprecated* Globally available parameter store.

To learn more about the process of building modules, visit the [building modules reference documentation](https://docs.cosmos.network/main/building-modules/intro).

## IBC[​](#ibc "Direct link to IBC")

The IBC module for the SDK is maintained by the IBC Go team in its [own repository](https://github.com/cosmos/ibc-go).

Additionally, the [capability module](https://github.com/cosmos/ibc-go/tree/fdd664698d79864f1e00e147f9879e58497b5ef1/modules/capability) is from v0.50+ maintained by the IBC Go team in its [own repository](https://github.com/cosmos/ibc-go/tree/fdd664698d79864f1e00e147f9879e58497b5ef1/modules/capability).

## CosmWasm[​](#cosmwasm "Direct link to CosmWasm")

The CosmWasm module enables smart contracts, learn more by going to their [documentation site](https://book.cosmwasm.com/), or visit [the repository](https://github.com/CosmWasm/cosmwasm).

## EVM[​](#evm "Direct link to EVM")

Read more about writing smart contracts with solidity at the official [`evm` documentation page](https://evm.cosmos.network/).
